--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
-    "vuetify": "^3.7.0"
+    "vuetify": "^3.7.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
