login completed, dashboard onboard

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
+    "medical_office_frontend": "file:",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
     "vuetify": "^3.7.0",
