--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
     "@mdi/font": "^7.4.47",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vue/babel-preset-jsx": "^1.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-loader": "^16.8.3"
   },
   "eslintConfig": {
     "root": true,
